--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "powerbi-visuals-tools": "^2.6.0",
     "tslint": "^5.16.0",
-    "tslint-microsoft-contrib": "^6.2.0"
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "next"
   },
   "scripts": {
     "lint": "tslint -c tslint.json -p tsconfig.json"
