--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "devDependencies": {
     "powerbi-visuals-tools": "^2.6.0",
-    "tslint": "^5.16.0",
+    "tslint": "^5.20.1",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "next"
+    "typescript": "3.4.5"
   },
   "scripts": {
     "lint": "tslint -c tslint.json -p tsconfig.json"
