Updated Jquery version

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
     "@types/jquery": "^3.3.29",
     "@types/lodash": "^4.14.108",
     "d3": "^3.5.5",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
     "lodash": "^4.17.15",
     "maq-visuals-chartutils": "^3.1.1",
     "powerbi-models": "^1.1.0",
-    "powerbi-visuals-tools": "^2.6.0",
     "powerbi-visuals-utils-dataviewutils": "^1.0.1",
     "powerbi-visuals-utils-formattingutils": "3.1.0",
     "powerbi-visuals-utils-interactivityutils": "4.4.0",
@@ -19,8 +18,9 @@
   },
   "devDependencies": {
     "powerbi-visuals-tools": "^2.6.0",
-    "tslint": "^5.16.0",
-    "tslint-microsoft-contrib": "^6.2.0"
+    "tslint": "^5.20.1",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "3.4.5"
   },
   "scripts": {
     "lint": "tslint -c tslint.json -p tsconfig.json"
